--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <section class="conteudo-principal">
-        <h2 class="titulo-principal">Teste<span>_</span></h2>
+        <h2 class="titulo-principal">Objetivos de Curto Prazo<span>_</span></h2>
         <div class="conteudo">
         <div class="botoes">
-            <button class="botao ativo">Emagrecer 5 kilos</button>
-            <button class="botao"> TRABALHAR (obj de Jesus</button>
-            <button class="botao">Correr dias alternados</button>
+            <button class="botao ativo"></button>
+            <button class="botao">Economizar 15% do salário em investimentos</button>
+            <button class="botao">teste</button>
             <button class="botao">Atualizar meu currículo</button>
         </div>
         <div class="abas-textos">
