--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <div class="botoes">
             <button class="botao ativo">Conseguir emprego</button>
             <button class="botao">Economizar 15% do salário em investimentos</button>
-            <button class="botao">teste</button>
-            <button class="botao">Atualizar meu currículo</button>
+            <button class="botao">Conseguir 10 quilos a mais</button>
+            <button class="botao">Ser mais produtivo no canal do Youtube</button>
         </div>
         <div class="abas-textos">
             <div class="aba-conteudo ativo">
