--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
         </div>
         <div class="abas-textos">
             <div class="aba-conteudo ativo">
-                <h3 class="aba-conteudo-titulo-principal">Teste</h3>
+                <h3 class="aba-conteudo-titulo-principal">Teste1</h3>
                 <h4 class="aba-conteudo-titulo-secundario"></h4>
             </div>
             <div class="aba-conteudo">
-                <h3 class="aba-conteudo-titulo-principal">Aprender a tocar viola caipira</h3>
+                <h3 class="aba-conteudo-titulo-principal">Teste2</h3>
                 <h4 class="aba-conteudo-titulo-secundario"></h4>
             </div>
             <div class="aba-conteudo">
-                <h3 class="aba-conteudo-titulo-principal">Correr dias alternados</h3>
+                <h3 class="aba-conteudo-titulo-principal">Teste3</h3>
                 <h4 class="aba-conteudo-titulo-secundario"></h4>
             </div>
             <div class="aba-conteudo">
-                <h3 class="aba-conteudo-titulo-principal">Atualizar meu currículo</h3>
+                <h3 class="aba-conteudo-titulo-principal">Teste4</h3>
                 <h4 class="aba-conteudo-titulo-secundario"></h4>
             </div>
             
