--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         <div class="abas-textos">
             <div class="aba-conteudo ativo">
-                <h3 class="aba-conteudo-titulo-principal">Teste1</h3>
+                <h3 class="aba-conteudo-titulo-principal">É necessário que eu imprima currículos</h3>
                 <h4 class="aba-conteudo-titulo-secundario"></h4>
             </div>
             <div class="aba-conteudo">
